fixed video window overflow, rewritten drag and drop logic, added volume control

--- a/src/main/resources/com/javajammers/dhwanii/style.css
+++ b/src/main/resources/com/javajammers/dhwanii/style.css
@@ -2,7 +2,7 @@
 
 /* General Background */
 .root {
-    -fx-background-color: #2e3440;
+    -fx-background-color: #ffffff;
     -fx-padding: 10px;
 }
 
